test/compilable/test9047c.d
// PERMUTE_ARGS:

import std.math;

void t1()
{
    import std.math;
    auto f = (double a, double b) => a ^^ b;
}
